[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo/currencies/CurrencyItem.gd" type="Script" id=1]

[node name="CurrencyItem" type="GridContainer"]
margin_right = 460.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_constants/vseparation = 8
custom_constants/hseparation = 8
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 460.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="SymbolField" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 58.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 0 )
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="NameField" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 66.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="AssetIdField" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_right = 401.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="SelectButton" type="Button" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_left = 409.0
margin_right = 460.0
margin_bottom = 24.0
text = "select"
